(lang dune 3.7)

(name brewin)

(generate_opam_files true)

(source
 (github "kylechui/brewin"))

(authors "Kyle Chui")

(maintainers "Kyle Chui")

(license "MIT License")

(documentation https://url/to/documentation)

(package
 (name brewin)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
